fix: add z-index: 5 to hover-overlay and hover-plus svg icons

--- a/src/assets/scss/theme/_overlay.scss
+++ b/src/assets/scss/theme/_overlay.scss
@@ -420,6 +420,7 @@ figure.overlay img {
 .hover-plus .hover-icon svg {
   width: 45px;
   height: 45px;
+  z-index: 5;
 }
 @media (min-width: 1200px) {
   .hover-plus .hover-icon,
